[gd_scene load_steps=2 format=3 uid="uid://y4y8kw4v8bqx"]

[ext_resource type="Script" uid="uid://c1iinehpemupi" path="res://scripts/LootPhase.gd" id="1_ota5y"]

[node name="LootPhase" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ota5y")

[node name="LootPanel" type="Panel" parent="."]
self_modulate = Color(0.8, 1, 0.8, 0.95)
custom_minimum_size = Vector2(800, 600)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="MarginContainer" type="MarginContainer" parent="LootPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="LootPanel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="LootPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "战利品获得阶段"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="LootPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="LootContainer" type="ScrollContainer" parent="LootPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 200)
layout_mode = 2

[node name="InventoryContainer" type="ScrollContainer" parent="LootPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 200)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="LootPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.15, 0.05, 1)
